--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,12 +19,11 @@ import { SOCIALS } from "../utils/constants";
   }
 </div>
 <p class="text-center text-xs text-text-muted mt-8 pb-10">
-  Made with ❤️ by <a href="https://jose-donato.pages.dev" class="link"
-    >José Donato</a
-  >. <br />Open source on <a
+  Made with ❤️ by <a href="https://josedonato.com" class="link">José Donato</a>. <br
+  />Open source on <a
     rel="noopener noreferrer"
     target="_blank"
-    href="https://github.com/jose-donato/jose-donato.pages.dev"
+    href="https://github.com/jose-donato/josedonato.com"
     class="link">GitHub</a
   >. If you like it, please give it a ⭐️!
 </p>
