fix posthog clip

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -64,7 +64,7 @@ const ogImageUrl = "/og_image.png";
       name="keywords"
       content="josé donato, fullstack, openbb, quant, trading, tools, finance"
     />
-    <Posthog />
+    <Posthog client:idle />
     <SEO
       {...seo}
       title={seo?.title ?? "José Donato"}
